--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,6 @@
     "target": "es2017",
     "allowJs": true,
     "experimentalDecorators": true,
-    "moduleResolution": "node",
-  },
-  //"include": ["src/index.ts", "src/types/*.d.ts"]
+    "moduleResolution": "node"
+  }
 }
